--- a/On the Map/On the Map/Base.lproj/Main.storyboard
+++ b/On the Map/On the Map/Base.lproj/Main.storyboard
@@ -158,7 +158,7 @@
             <objects>
                 <tableViewController id="rJW-ux-v37" customClass="TableViewController" customModule="On_the_Map" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="68" sectionHeaderHeight="22" sectionFooterHeight="22" id="mfo-3H-56s">
-                        <rect key="frame" x="0.0" y="64" width="600" height="487"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="487"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -221,7 +221,7 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="n9t-ae-XQG">
                             <connections>
-                                <action selector="refreshData:" destination="nDL-FD-U22" id="6fJ-lK-aqA"/>
+                                <action selector="tapRefreshButton:" destination="nDL-FD-U22" id="6Gv-00-aAg"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -234,8 +234,8 @@
                     <connections>
                         <outlet property="refreshButton" destination="n9t-ae-XQG" id="bY5-z2-Ix4"/>
                         <segue destination="ZJA-xn-dQb" kind="relationship" relationship="viewControllers" id="aWX-lw-68V"/>
-                        <segue destination="rJW-ux-v37" kind="relationship" relationship="viewControllers" id="Unn-yW-Toa"/>
                         <segue destination="X7j-U8-7uo" kind="show" identifier="refreshView" id="A3D-jv-7vn"/>
+                        <segue destination="rJW-ux-v37" kind="relationship" relationship="viewControllers" id="nlc-zY-HO5"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x6H-c9-XsQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -379,7 +379,7 @@
                     <navigationItem key="navigationItem" id="nhZ-Dz-P37">
                         <barButtonItem key="rightBarButtonItem" title="Cancel" id="amw-Ux-U1L">
                             <connections>
-                                <segue destination="X7j-U8-7uo" kind="presentation" identifier="returnToTabs" id="BaQ-RL-tWb"/>
+                                <action selector="tapCancelButton:" destination="tBN-k7-7aY" id="2p0-Ij-JbS"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -403,7 +403,4 @@
         <image name="Table" width="32" height="32"/>
         <image name="Udacity" width="256" height="256"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="BaQ-RL-tWb"/>
-    </inferredMetricsTieBreakers>
 </document>
